@@ -5,6 +5,9 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
+- Introduce progressbar.
+  [Kevin Bieri]
+
 - Register imaging scales as dynamic SCSS resource.
   [Kevin Bieri]
 
